--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -25,6 +25,10 @@
   padding-bottom: 30vh;
 }
 
+.offcanvasHeader button {
+  background-color: rgb(255, 227, 134) !important;
+}
+
 @media (min-width: 768px) {
   .fab {
     width: 80px;
